--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -8,7 +8,7 @@
 
   </div>
   <div class="col-md-2">
-    <button class="form-control" [routerLink]="['/add/']">Create Task</button>
+    <button style="width: 100%"  class="btn btn-outline-info" [routerLink]="['/add/']">Create Task</button>
   </div>
 </div>
 
