--- a/src/app/line/line-add/line-add.component.html
+++ b/src/app/line/line-add/line-add.component.html
@@ -51,7 +51,7 @@
       <label style="font-weight: bold">Circuit ID</label>
     </div>
     <div class="col-md-10">
-      <input type="text" class="form-control" formControlName="ci">
+      <input type="text" class="form-control" formControlName="circuitId">
     </div>
   </div>
 
