--- a/src/app/site/site-add/site-add.component.html
+++ b/src/app/site/site-add/site-add.component.html
@@ -4,16 +4,65 @@
   <div class="col-md-2">
     <label style="font-weight: bold">Name</label>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-10">
     <input type="text" class="form-control" formControlName="name">
   </div>
-  <div class="col-md-2">
-    <label style="font-weight: bold">GMT</label>
-  </div>
-  <div class="col-md-4">
-    <input type="number" class="form-control" formControlName="gmt">
-  </div>
+<!--  <div class="col-md-2">-->
+<!--    <label style="font-weight: bold">GMT</label>-->
+<!--  </div>-->
+<!--  <div class="col-md-4">-->
+<!--    <input type="number" class="form-control" formControlName="gmt">-->
+<!--  </div>-->
 </div>
+
+  <div class="row" style="margin: 5px 0px">
+    <div class="col-md-2">
+      <label style="font-weight: bold">Nation</label>
+    </div>
+    <div class="col-md-10">
+      <input type="text" class="form-control" formControlName="nation">
+    </div>
+  </div>
+
+  <div class="row" style="margin: 5px 0px">
+    <div class="col-md-2">
+      <label style="font-weight: bold">City</label>
+    </div>
+    <div class="col-md-10">
+      <input type="text" class="form-control" formControlName="city">
+    </div>
+  </div>
+
+  <div class="row" style="margin: 5px 0px">
+    <div class="col-md-2">
+      <label style="font-weight: bold">ZoneId</label>
+    </div>
+
+    <div class="col-md-2">
+      <input type="text" class="form-control" formControlName = 'valueFilter' (blur)="filterZoneId()">
+
+    </div>
+
+    <div class="col-md-4">
+      <select class="form-control" formControlName="zoneId" (change)="loadGMT()">
+        <option value="">Choose a zoneId</option>
+        <option *ngFor="let zoneId of zoneIdList" [ngValue]="zoneId">{{zoneId}}</option>
+      </select>
+    </div>
+
+    <div class="col-md-4">
+      <input readonly type="text" class="form-control" formControlName="gmt" value="{{gmtValue}}">
+    </div>
+  </div>
+
+  <div class="row" style="margin: 5px 0px">
+    <div class="col-md-2">
+      <label style="font-weight: bold">Address</label>
+    </div>
+    <div class="col-md-10">
+      <input type="text" class="form-control" formControlName="address">
+    </div>
+  </div>
 
 <div class="row" style="margin: 5px 0px">
   <div class="col-md-2">
