--- a/src/app/site/site-detail/site-detail.component.html
+++ b/src/app/site/site-detail/site-detail.component.html
@@ -11,43 +11,43 @@
 
 </div>
 
-<h5>Contact List</h5>
-<div class="row" style="margin-bottom: 5px">
-  <div class="col-md-2"></div>
-  <div class="col-md-2"></div>
-  <div class="col-md-2"></div>
-  <div class="col-md-2"></div>
-  <div class="col-md-2"></div>
-  <div class="col-md-2">
-    <button [routerLink]="['/contact/add/' + site.id]" style="width: 100%" class="btn btn-outline-info">Create Contact</button>
-  </div>
-</div>
-<table class="table table-bordered">
-  <thead>
-    <th style="text-align: center">No.</th>
-    <th>Name</th>
-    <th>Email</th>
-    <th style="text-align: center">Office</th>
-    <th style="text-align: center">Mobile</th>
-    <th style="text-align: center">Role</th>
-    <th>Note</th>
-    <th style="text-align: center">Action</th>
-  </thead>
-  <tbody>
-  <tr *ngFor="let contact of site.contactList,  index as i">
-    <td style="text-align: center">{{i + 1}}</td>
-    <td>{{contact.name != null ? contact.name : ""}}</td>
-    <td>{{contact.email != null ? contact.email : ""}}</td>
-    <td style="text-align: center">{{contact.office != null ? contact.office : ""}}</td>
-    <td style="text-align: center">{{contact.phone != null ? contact.phone : ""}}</td>
-    <td style="text-align: center">{{contact.role != null ? contact.role : ""}}</td>
-    <td>{{contact.note != null ? contact.note : ""}}</td>
-    <td style="text-align: center">
-      <button class="btn btn-outline-info" [routerLink]="['/contact/edit/' + contact.id]">Edit</button>
-    </td>
-  </tr>
-  </tbody>
-</table>
+<!--<h5>Contact List</h5>-->
+<!--<div class="row" style="margin-bottom: 5px">-->
+<!--  <div class="col-md-2"></div>-->
+<!--  <div class="col-md-2"></div>-->
+<!--  <div class="col-md-2"></div>-->
+<!--  <div class="col-md-2"></div>-->
+<!--  <div class="col-md-2"></div>-->
+<!--  <div class="col-md-2">-->
+<!--    <button [routerLink]="['/contact/add/' + site.id]" style="width: 100%" class="btn btn-outline-info">Create Contact</button>-->
+<!--  </div>-->
+<!--</div>-->
+<!--<table class="table table-bordered">-->
+<!--  <thead>-->
+<!--    <th style="text-align: center">No.</th>-->
+<!--    <th>Name</th>-->
+<!--    <th>Email</th>-->
+<!--    <th style="text-align: center">Office</th>-->
+<!--    <th style="text-align: center">Mobile</th>-->
+<!--    <th style="text-align: center">Role</th>-->
+<!--    <th>Note</th>-->
+<!--    <th style="text-align: center">Action</th>-->
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--  <tr *ngFor="let contact of site.contactList,  index as i">-->
+<!--    <td style="text-align: center">{{i + 1}}</td>-->
+<!--    <td>{{contact.name != null ? contact.name : ""}}</td>-->
+<!--    <td>{{contact.email != null ? contact.email : ""}}</td>-->
+<!--    <td style="text-align: center">{{contact.office != null ? contact.office : ""}}</td>-->
+<!--    <td style="text-align: center">{{contact.phone != null ? contact.phone : ""}}</td>-->
+<!--    <td style="text-align: center">{{contact.role != null ? contact.role : ""}}</td>-->
+<!--    <td>{{contact.note != null ? contact.note : ""}}</td>-->
+<!--    <td style="text-align: center">-->
+<!--      <button class="btn btn-outline-info" [routerLink]="['/contact/edit/' + contact.id]">Edit</button>-->
+<!--    </td>-->
+<!--  </tr>-->
+<!--  </tbody>-->
+<!--</table>-->
 
 <h5>Line List</h5>
 <div class="row" style="margin-bottom: 5px">
@@ -81,7 +81,7 @@
     <td>{{line.shortName}}</td>
     <td>{{line.shortName2}}</td>
     <td style="text-align: center">{{line.isp != null ? line.isp : ""}}</td>
-    <td style="text-align: center">{{line.ci != null ? line.ci : ""}}</td>
+    <td style="text-align: center">{{line.circuitId != null ? line.circuitId : ""}}</td>
     <td>{{line.ipAddress != null ? line.ipAddress : ""}}</td>
     <td>{{line.pingtest != null ? line.pingtest : ""}}</td>
     <td style="text-align: center">
