--- a/src/app/site/site-list/site-list.component.html
+++ b/src/app/site/site-list/site-list.component.html
@@ -1,13 +1,35 @@
-<h4>LIST SITE {{this.companyName}}</h4>
-<ul style="list-style-type: none">
-  <li><a href="#/site/company/1" (click)="load1()">I. LG Electronic</a></li>
-  <li><a href="#/site/company/2" (click)="load2()">II. LG Energy Solution</a></li>
-  <li><a href="#/site/company/3"  (click)="load3()">III. LG Chem / LG Household & Health Care</a></li>
-  <li><a href="#/site/company/4" (click)="load4()">IV. LG Display</a></li>
-  <li><a href="#/site/company/5" (click)="load5()">V. LG Innotek</a></li>
-  <li><a href="#/site/company/6" (click)="load6()">VI. LX International / LX Pantos / LX Hausys Overseas</a></li>
+<h4>LIST SITE {{this.companyName}} - {{selectedItem}}</h4>
 
+<ul style="list-style-type: none">
+  <li [ngClass]="{'selected': selectedItem === 'I. LG Electronic'}" >
+    <a href="#/site/company/1" (click)="load1()">I. LG Electronic</a>
+  </li>
+
+  <li [ngClass]="{'selected': selectedItem === 'II. LG Energy Solution'}">
+    <a href="#/site/company/2" (click)="load2()">II. LG Energy Solution</a>
+  </li>
+
+  <li [ngClass]="{'selected': selectedItem === 'III. LG Chem / LG Household & Health Care'}">
+    <a href="#/site/company/3"  (click)="load3()">III. LG Chem / LG Household & Health Care</a>
+  </li>
+
+  <li [ngClass]="{'selected': selectedItem === 'IV. LG Display'}">
+    <a href="#/site/company/4" (click)="load4()">IV. LG Display</a>
+  </li>
+
+  <li [ngClass]="{'selected': selectedItem === 'V. LG Innotek'}">
+    <a href="#/site/company/5" (click)="load5()">V. LG Innotek</a>
+  </li>
+
+  <li [ngClass]="{'selected': selectedItem === 'VI. LX International / LX Pantos / LX Hausys Overseas'}">
+    <a href="#/site/company/6" (click)="load6()">VI. LX International / LX Pantos / LX Hausys Overseas</a>
+  </li>
+
+<!--  <li [ngClass]="{'selected': selectedItem === 'VII. Trunk'}">-->
+<!--    <a href="#/site/company/7" (click)="load7()">VII. Trunk</a>-->
+<!--  </li>-->
 </ul>
+
 <div class="row" style="margin: 5px 0">
   <div class="col-md-2"></div>
   <div class="col-md-2"></div>
@@ -21,9 +43,9 @@
 
 <div class="row" style="margin-bottom: 5px">
   <div class="col-md-2"></div>
-  <div class="col-md-2">Name</div>
+  <div class="col-md-2" style="font-weight: bold">Name</div>
   <div class="col-md-6">
-    <input type="text" class="form-control" [(ngModel)]="name">
+    <input type="text" class="form-control" [(ngModel)]="name" (keyup.enter)="searchSite()">
   </div>
 
   <div class="col-md-2">
@@ -31,87 +53,128 @@
   </div>
 </div>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-striped">
   <thead>
-  <tr>
-    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">No.</th>
-    <th style="border-bottom: none; vertical-align: middle;" rowspan="2">Name</th>
-    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">GMT</th>
-    <th style="border-bottom: none;  vertical-align: middle;" rowspan="2">Configure</th>
-    <th style="border-bottom: none;  vertical-align: middle;" rowspan="2">Configure Kr</th>
-    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">Position</th>
-    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">Company</th>
-    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">Contact</th>
-    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" colspan="3">Line List</th>
-  </tr>
-  <tr>
-    <th style="border-bottom: none; vertical-align: middle;">Name</th>
-    <th style="border-bottom: none; vertical-align: middle;">ShortName 1 (Internal)</th>
-    <th style="border-bottom: none; vertical-align: middle;">ShortName 2 (Customer)</th>
-  </tr>
-
+      <th style="border-bottom: none; text-align: center;  vertical-align: middle;">No.</th>
+      <th style="border-bottom: none; text-align: center;  vertical-align: middle;">Position</th>
+      <th style="border-bottom: none; vertical-align: middle;">Name</th>
+      <th style="border-bottom: none; text-align: center;vertical-align: middle;">Nation</th>
+      <th style="border-bottom: none; text-align: center;vertical-align: middle;">City</th>
+      <th style="border-bottom: none; vertical-align: middle;">Address</th>
+      <th style="border-bottom: none; text-align: center;  vertical-align: middle;">Zone</th>
+      <th style="border-bottom: none; text-align: center;  vertical-align: middle;">GMT</th>
+<!--      <th style="border-bottom: none; text-align: center;  vertical-align: middle;">GMT</th>-->
+      <th style="border-bottom: none;  vertical-align: middle;" >Configure</th>
+      <th style="border-bottom: none;  vertical-align: middle;" >Configure Kr</th>
+      <th></th>
   </thead>
   <tbody>
-  <ng-container *ngFor="let site of siteList; let i = index">
-    <!-- First row with rowspan -->
-    <tr *ngIf="site.lineList.length > 0">
-      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{i + 1}}</td>
-      <td [attr.rowspan]="site.lineList.length">{{site.name}}</td>
-      <td style="text-align: center"
-          [attr.rowspan]="site.lineList.length">{{site.gmt > 0 ? '+' + site.gmt : site.gmt}}</td>
-      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{site.configure}}</td>
-      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{site.configureKr}}</td>
-      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{site.ric}}</td>
-      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{site.company.name}}</td>
-      <td style="text-align: center;padding: 0; margin: 0" [attr.rowspan]="site.lineList.length">
-        <table style="width: 100%">
-          <tr *ngFor = "let contact of this.site.contactList">
-            <td>{{contact.name}}</td>
-          </tr>
-        </table>
-      </td>
-      <td>{{ site.lineList[0].name}}</td>
-      <td>{{ site.lineList[0].shortName}}</td>
-      <td>{{ site.lineList[0].shortName2}}</td>
-      <td style="text-align: center" [attr.rowspan]="site.lineList.length">
-        <button style="margin: 5px" class="btn btn-outline-info" [routerLink]="['/site/detail/' + site.id]"> Detail</button>
-        <button style="margin: 5px" class="btn btn-outline-dark" [routerLink]="['/site/edit/' + site.id]">Edit</button>
+    <tr *ngFor="let site of siteList; let i = index">
+      <td style="text-align: center">{{i + 1}}</td>
+      <td style="text-align: center">{{site.ric}}</td>
+      <td>{{site.name}}</td>
+      <td style="text-align: center">{{site.nation}}</td>
+      <td style="text-align: center">{{site.city}}</td>
+      <td>{{site.address}}</td>
+      <td style="text-align: center">{{site.zoneId}}</td>
+      <td style="text-align: center">{{site.gmt}}</td>
+      <td>{{site.configure}}</td>
+      <td>{{site.configureKr}}</td>
+      <td style="text-align: center">
+        <button style="margin: 5px" class="btn btn-outline-primary" [routerLink]="['/site/edit/' + site.id]">Edit</button>
       </td>
     </tr>
-
-    <!-- Additional rows for remaining line items -->
-    <ng-container *ngIf="site.lineList.length > 0">
-      <ng-container *ngFor="let line of site.lineList.slice(1)">
-        <tr>
-          <td>{{ line.name }}</td>
-          <td>{{ line.shortName }}</td>
-          <td>{{ line.shortName2 }}</td>
-        </tr>
-      </ng-container>
-    </ng-container>
-
-    <!-- Handle case where lineList is empty -->
-    <tr *ngIf="site.lineList.length === 0">
-      <td style="text-align: center">{{ i + 1 }}</td>
-      <td>{{ site.name }}</td>
-      <td style="text-align: center">
-        {{ site.gmt > 0 ? '+' + site.gmt : site.gmt }}
-      </td>
-      <td style="text-align: center">{{ site.configure }}</td>
-      <td style="text-align: center">{{ site.configureKr }}</td>
-      <td style="text-align: center">{{ site.ric }}</td>
-      <td style="text-align: center">{{ site.company.name }}</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td style="text-align: center">
-        <button style="margin: 5px" class="btn btn-outline-info" [routerLink]="['/site/detail/' + site.id]">Detail</button>
-        <button style="margin: 5px" class="btn btn-outline-dark" [routerLink]="['/site/edit/' + site.id]">Edit</button>
-      </td>
-    </tr>
-
-  </ng-container>
   </tbody>
 </table>
+
+
+
+
+
+<!--<table class="table table-bordered">-->
+<!--  <thead>-->
+<!--  <tr>-->
+<!--    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">No.</th>-->
+<!--    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">Position</th>-->
+<!--    <th style="border-bottom: none; vertical-align: middle;" rowspan="2">Name</th>-->
+<!--    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">GMT</th>-->
+<!--    <th style="border-bottom: none;  vertical-align: middle;" rowspan="2">Configure</th>-->
+<!--    <th style="border-bottom: none;  vertical-align: middle;" rowspan="2">Configure Kr</th>-->
+
+<!--&lt;!&ndash;    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">Company</th>&ndash;&gt;-->
+<!--&lt;!&ndash;    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" rowspan="2">Contact</th>&ndash;&gt;-->
+<!--&lt;!&ndash;    <th style="border-bottom: none; text-align: center;  vertical-align: middle;" colspan="3">Line List</th>&ndash;&gt;-->
+<!--  </tr>-->
+<!--&lt;!&ndash;  <tr>&ndash;&gt;-->
+<!--&lt;!&ndash;    <th style="border-bottom: none; vertical-align: middle;">Name</th>&ndash;&gt;-->
+<!--&lt;!&ndash;    <th style="border-bottom: none; vertical-align: middle;">ShortName 1 (Internal)</th>&ndash;&gt;-->
+<!--&lt;!&ndash;    <th style="border-bottom: none; vertical-align: middle;">ShortName 2 (Customer)</th>&ndash;&gt;-->
+<!--&lt;!&ndash;  </tr>&ndash;&gt;-->
+
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--  <ng-container *ngFor="let site of siteList; let i = index">-->
+<!--    &lt;!&ndash; First row with rowspan &ndash;&gt;-->
+<!--    <tr *ngIf="site.lineList.length > 0">-->
+<!--      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{i + 1}}</td>-->
+<!--      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{site.ric}}</td>-->
+<!--      <td [attr.rowspan]="site.lineList.length">{{site.name}}</td>-->
+<!--      <td style="text-align: center"-->
+<!--          [attr.rowspan]="site.lineList.length">{{site.gmt > 0 ? '+' + site.gmt : site.gmt}}</td>-->
+<!--      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{site.configure}}</td>-->
+<!--      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{site.configureKr}}</td>-->
+
+<!--&lt;!&ndash;      <td style="text-align: center" [attr.rowspan]="site.lineList.length">{{site.company.name}}</td>&ndash;&gt;-->
+<!--&lt;!&ndash;      <td style="text-align: center;padding: 0; margin: 0" [attr.rowspan]="site.lineList.length">&ndash;&gt;-->
+<!--&lt;!&ndash;        <table style="width: 100%">&ndash;&gt;-->
+<!--&lt;!&ndash;          <tr *ngFor = "let contact of this.site.contactList">&ndash;&gt;-->
+<!--&lt;!&ndash;            <td>{{contact.name}}</td>&ndash;&gt;-->
+<!--&lt;!&ndash;          </tr>&ndash;&gt;-->
+<!--&lt;!&ndash;        </table>&ndash;&gt;-->
+<!--&lt;!&ndash;      </td>&ndash;&gt;-->
+<!--&lt;!&ndash;      <td>{{ site.lineList[0].name}}</td>&ndash;&gt;-->
+<!--&lt;!&ndash;      <td>{{ site.lineList[0].shortName}}</td>&ndash;&gt;-->
+<!--&lt;!&ndash;      <td>{{ site.lineList[0].shortName2}}</td>&ndash;&gt;-->
+<!--      <td style="text-align: center" [attr.rowspan]="site.lineList.length">-->
+<!--        <button style="margin: 5px" class="btn btn-outline-info" [routerLink]="['/site/detail/' + site.id]"> Detail</button>-->
+<!--        <button style="margin: 5px" class="btn btn-outline-dark" [routerLink]="['/site/edit/' + site.id]">Edit</button>-->
+<!--      </td>-->
+<!--    </tr>-->
+
+<!--    &lt;!&ndash; Additional rows for remaining line items &ndash;&gt;-->
+<!--    <ng-container *ngIf="site.lineList.length > 0">-->
+<!--      <ng-container *ngFor="let line of site.lineList.slice(1)">-->
+<!--&lt;!&ndash;        <tr>&ndash;&gt;-->
+<!--&lt;!&ndash;          <td>{{ line.name }}</td>&ndash;&gt;-->
+<!--&lt;!&ndash;          <td>{{ line.shortName }}</td>&ndash;&gt;-->
+<!--&lt;!&ndash;          <td>{{ line.shortName2 }}</td>&ndash;&gt;-->
+<!--&lt;!&ndash;        </tr>&ndash;&gt;-->
+<!--      </ng-container>-->
+<!--    </ng-container>-->
+
+<!--    &lt;!&ndash; Handle case where lineList is empty &ndash;&gt;-->
+<!--    <tr *ngIf="site.lineList.length === 0">-->
+<!--      <td style="text-align: center">{{ i + 1 }}</td>-->
+<!--      <td style="text-align: center">{{ site.ric }}</td>-->
+<!--      <td>{{ site.name }}</td>-->
+<!--      <td style="text-align: center">-->
+<!--        {{ site.gmt > 0 ? '+' + site.gmt : site.gmt }}-->
+<!--      </td>-->
+<!--      <td style="text-align: center">{{ site.configure }}</td>-->
+<!--      <td style="text-align: center">{{ site.configureKr }}</td>-->
+
+<!--&lt;!&ndash;      <td style="text-align: center">{{ site.company.name }}</td>&ndash;&gt;-->
+<!--      <td></td>-->
+<!--      <td></td>-->
+<!--      <td></td>-->
+<!--&lt;!&ndash;      <td></td>&ndash;&gt;-->
+<!--      <td style="text-align: center">-->
+<!--        <button style="margin: 5px" class="btn btn-outline-info" [routerLink]="['/site/detail/' + site.id]">Detail</button>-->
+<!--        <button style="margin: 5px" class="btn btn-outline-dark" [routerLink]="['/site/edit/' + site.id]">Edit</button>-->
+<!--      </td>-->
+<!--    </tr>-->
+
+<!--  </ng-container>-->
+<!--  </tbody>-->
+<!--</table>-->
 
