--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -157,18 +157,22 @@
   <h5>TIPS</h5>
   <div class="row" style="margin: 20px 0px">
     <div class="col-md-6">
-      <p>Report failure to ... (...)</p>
-      <p>Request RFO to ...</p>
+      <p>NMS line detected, backup service</p>
       <p>When connecting to ... equipment, BGP is down, interface up</p>
       <p>Report problem to ... and request RFO (...)</p>
+      <p>Report failure to ... (...)</p>
+      <p>Request RFO to ...</p>
+      <p>Line restored</p>
       <p>Request confirmation via email, call from...</p>
       <p>Request confirmation via email from site administrator and ... administrator</p>
     </div>
     <div class="col-md-6">
-      <p>... 에 장애 신고(...)</p>
-      <p>... 에서 RFO 제공했음</p>
+      <p>NMS 선감지,백업 서비스</p>
       <p>... 장비에 접속시 BGP 다운 및 인터페이스 업 확인됨</p>
       <p>... 에 장애신고 및 RFO 요청함 (...)</p>
+      <p>... 에 장애 신고(...)</p>
+      <p>...에 RFO 요청함</p>
+      <p>회선 복구</p>
       <p>... 에게 이메일 및 전화를 통해 확인을 요청함</p>
       <p>사이트 관리자 및 ... 관리자에게 이메일을 통해 확인 요청함</p>
     </div>
