--- a/src/app/sms/sms-create/sms-create.component.html
+++ b/src/app/sms/sms-create/sms-create.component.html
@@ -169,8 +169,8 @@
       </div>
       <div *ngIf="isTextPresentPingLog">
         <p style="font-weight: bold">WORKING:</p>
-        <p>Device IP: {{ipAddress}}</p>
-        <p>Ping Command: {{pingCommand}}</p>
+        <p><span style="font-weight: bold">Device IP</span>: {{ipAddress}}</p>
+        <p><span style="font-weight: bold">Ping Command:</span> {{pingCommand}}</p>
       </div>
       <div>
         <p style="font-weight: bold"> EMAIL:</p>
