--- a/src/app/contact/contact-edit/contact-edit.component.html
+++ b/src/app/contact/contact-edit/contact-edit.component.html
@@ -1,10 +1,10 @@
 <h4>EDIT CONTACT</h4>
 <div style="margin: 5px 0px">
-  <p><span style="font-weight: bold">Name</span>: {{contact.site.name}}</p>
-  <p><span style="font-weight: bold">GMT</span>: {{contact.site.gmt}}</p>
-  <p><span style="font-weight: bold">Configuration</span>: {{contact.site.configure}}</p>
-  <p><span style="font-weight: bold">Configuration Kr</span>: {{contact.site.configureKr}}</p>
-  <p><span style="font-weight: bold">Company</span>: {{contact.site.company.name}}</p>
+  <p><span style="font-weight: bold">Name</span>: {{contact?.site.name}}</p>
+  <p><span style="font-weight: bold">GMT</span>: {{contact?.site.gmt}}</p>
+  <p><span style="font-weight: bold">Configuration</span>: {{contact?.site.configure}}</p>
+  <p><span style="font-weight: bold">Configuration Kr</span>: {{contact?.site.configureKr}}</p>
+  <p><span style="font-weight: bold">Company</span>: {{contact?.site.company.name}}</p>
 </div>
 
 <form [formGroup]="contactForm">
