--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 html {
   font-size : 13px;
   font-family: Arial, sans-serif;
@@ -5,3 +7,6 @@ html {
 }
 
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
